[package]
name = "logitech_extreme_3d_pro"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev = "0.13.1"
rppal = "0.22.1"

[dev-dependencies]

# [lib]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
